--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Will Fitzgerald <willf@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ["^3.12"]
+python = ">=3.8.1"
 
 
 [tool.poetry.group.dev.dependencies]
