--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wmu-greek-utils"
-version = "0.3.0"
+version = "0.3.1"
 description = "A collection of utilities for working with Greek text"
 authors = ["Will Fitzgerald <willf@users.noreply.github.com>"]
 readme = "README.md"
@@ -9,6 +9,7 @@ readme = "README.md"
 python = ">=3.8.1"
 python-dotenv = "^1.0.1"
 greek-normalisation = "^0.5.1"
+regex = "^2024.7.24"
 
 
 [tool.poetry.group.dev.dependencies]
